[package]
name = "rsdd"
version = "0.1.0"
edition = "2021"
authors = ["Steven Holtzen <s.holtzen@northeastern.edu>"]
license = "MIT"
repository = "https://github.com/neuppl/rsdd"
description = "Rust decision diagrams."
resolver = "2"

[dependencies]
rand = "0.8.5"
dimacs = "0.2.0"
primal = "0.3.0"
pretty = "0.3.3"
quickcheck = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_sexpr = { version = "0.1.0" }
rustc-hash = "1.1.0"
bit-set = "0.5.3"
segment-tree = "2.0.0"
bumpalo = "3.11.1"
petgraph = "0.5.1"
rand_chacha = "0.3.1"
rational = "1.2.2"
# optional: only used to build [[bin]]
clap = { version = "4.2.1", features = ["derive"], optional = true }
serde_json = { version = "1.0.81", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
serde_json = { version = "1.0.81" }
serde-wasm-bindgen = { version = "0.4" }
wasm-bindgen = { version = "0.2.84" }

# example/test-only
[dev-dependencies]
serde_json = { version = "1.0.81" }
clap = { version = "4.2.1", features = ["derive"] }
rayon = "1.7.0"

[lib]
name = "rsdd"
path = "src/lib.rs"
crate-type = ["cdylib", "lib", "staticlib"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[features]
cli = ["clap", "serde_json"]
ffi = []

[[bin]]
name = "bottomup_cnf_to_bdd"
path = "bin/bottomup_cnf_to_bdd.rs"
required-features = ["cli"]

[[bin]]
name = "bottomup_formula_to_bdd"
path = "bin/bottomup_formula_to_bdd.rs"
required-features = ["cli"]

[[bin]]
name = "weighted_model_count"
path = "bin/weighted_model_count.rs"
required-features = ["cli"]

[[example]]
name = "one_shot_benchmark"
path = "examples/one_shot_benchmark.rs"

[[example]]
name = "semantic_hash_experiment"
path = "examples/semantic_hash_experiment.rs"

[[example]]
name = "semantic_top_down_experiment"
path = "examples/semantic_top_down_experiment.rs"

[[example]]
name = "marginal_map_experiment"
path = "examples/marginal_map_experiment.rs"

[[example]]
name = "parallel_semantic"
path = "examples/parallel_semantic.rs"
